# projectkennel

./: .gitignore  .taplo.toml  01-problem-statement.md  01-thesis.md  03-trust-boundaries.md  04-2-filesystem.md  04-3-network.md  04-4-afunix.md  04-5-dbus.md  04-trust-boundaries.md  05-templates.md  06-enforcement-architecture.md  07-1-exec.md  07-2-filesystem.md  07-3-network.md  07-4-afunix.md  07-5-dbus.md  07-7-other.md  07-policy-lifecycle.md  08-failure-modes.md  09-worked-examples.md  12-glossary-references.md  AS-BUILT.md  BUILD-ENV.md  CHANGELOG.md  CHECKSUMS.toml  CODE_OF_CONDUCT.md  CODING-STANDARDS.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEPENDENCIES.md  EXEC-SUMMARY.md  HANDOFF.md  HOWTO-admin.md  HOWTO.md  INSTALL.md  KEYS.md  MAINTAINERS.md  NOTICE  (+12 more)
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
architecture/: 00-overview.md  01-process-model.md  02-0-overview.md  02-1-cli.md  02-2-config-schema.md  02-3-audit-schema.md  02-4-ipc.md  02-5-bpf-abi.md  02-6-internal-api.md  03-crate-decomposition.md  04-trust-boundaries.md  05-state-and-supervision.md  06-build-and-test.md  07-paths.md  08-as-built-notes.md
bpf/: HELPERS.md  README.md  audit_events.h  bind4.bpf.c  bind6.bpf.c  connect4.bpf.c  connect6.bpf.c  kennel.bpf.h  maps.h  sendmsg4.bpf.c  sendmsg6.bpf.c  setsockopt.bpf.c  sock_create.bpf.c  vmlinux.h
crates-archive/: caps-0.5.6.crate  lexopt-0.3.2.crate  memchr-2.8.1.crate
crates/kennel-bpf/: Cargo.toml  build.rs
crates/kennel-bpf/src/: lib.rs  loader.rs  sys.rs
crates/kennel-netproxy/: Cargo.toml
crates/kennel-netproxy/src/: allow.rs  audit.rs  config.rs  dns.rs  http.rs  lib.rs  main.rs  protocol.rs  server.rs  socks5.rs
crates/kennel-policy/: Cargo.toml
crates/kennel-policy/src/: canonical.rs  compile.rs  error.rs  invariant.rs  keys.rs  leaf.rs  lib.rs  lock.rs  resolve.rs  settled.rs  signature.rs  source.rs  source_sig.rs  translate.rs
crates/kennel-privhelper/: Cargo.toml
crates/kennel-privhelper/src/: alloc.rs  client.rs  exec.rs  lib.rs  main.rs  validate.rs  wire.rs
crates/kennel-privhelper/tests/: ipc.rs
crates/kennel-spawn/: Cargo.toml
crates/kennel-spawn/src/: lib.rs  plan.rs
crates/kennel-syscall/: Cargo.toml
crates/kennel-syscall/src/: landlock.rs  lib.rs  listenfd.rs  mount.rs  namespace.rs  netlink.rs  path.rs  process.rs  scm.rs  seccomp.rs  spawn.rs  unistd.rs
crates/kennel-text/: Cargo.toml
crates/kennel-text/src/: lib.rs
crates/kenneld/: Cargo.toml
crates/kenneld/src/: cgroup.rs  control.rs  ctx.rs  etc.rs  lib.rs  policy.rs  proxy.rs  server.rs  socket.rs
crates/kenneld/tests/: e2e.rs
docs/: 00-frontmatter.md  02-adversary-model.md  03-problem-statement.md  05-templates.md  07-3-network.md  07-6-x11.md  07-7-other.md  08-enforcement-architecture.md  09-policy-lifecycle.md  10-failure-modes.md  11-open-questions.md
fragments/: README.md
fuzz/: Cargo.toml
keys/: README.md  kennel-maint-2026.pub
man/: README.md  config.toml.5  facade-afunix.8  facade-client.8  facade-socks5.8  facade-ssh.8  host-inetd.8  host-netproxy.8  kennel-akc.8  kennel-bin-init.8  kennel-key.1  kennel-policy.1  kennel-privhelper.8  kennel-template.1  kennel.1  kenneld.8  policy.toml.5  subkennel.5  system.toml.5
porting/: DARWIN-COMPAT.md  FREEBSD-COMPAT.md  README.md
schema/: README.md  policy.toml.schema
src/crates/facade-client/: Cargo.toml
src/crates/facade-client/src/: main.rs
src/crates/facade-netshim/: Cargo.toml
src/crates/facade-netshim/src/: main.rs
src/crates/facade-socks5/: Cargo.toml
src/crates/facade-socks5/src/: http.rs  main.rs
src/crates/facade-ssh/: Cargo.toml
src/crates/facade-ssh/src/: main.rs
src/crates/host-inetd/: Cargo.toml
src/crates/host-inetd/src/: lib.rs  listen.rs  main.rs
src/crates/host-netproxy/: Cargo.toml
src/crates/host-netproxy/src/: conduit.rs  lib.rs  main.rs
src/crates/kennel-afunix-shim/: Cargo.toml
src/crates/kennel-afunix-shim/src/: main.rs
src/crates/kennel-audit/: Cargo.toml
src/crates/kennel-audit/src/: build.rs  event.rs  journald.rs  lib.rs  message_ids.rs  render.rs  sinks.rs  time.rs  uuidv7.rs  writer.rs
src/crates/kennel-bin-init/: Cargo.toml
src/crates/kennel-bin-init/src/: main.rs
src/crates/kennel-bin-oci-entry/: Cargo.toml
src/crates/kennel-bin-oci-entry/src/: env_strip.rs  main.rs
src/crates/kennel-bin-ssh-reorigin/: Cargo.toml
src/crates/kennel-bin-ssh-reorigin/src/: lib.rs  main.rs
src/crates/kennel-binder/: Cargo.toml
src/crates/kennel-binder/src/: binderfs.rs  client.rs  ctxmgr.rs  lib.rs  proto.rs  service.rs  sys.rs
src/crates/kennel-binder/tests/: root_binderfs.rs  root_fd.rs  root_transact.rs
src/crates/kennel-cli/: Cargo.toml
src/crates/kennel-cli/src/: key.rs  lib.rs  main.rs  misc.rs  oci.rs  policy.rs  review.rs  run.rs  runtime.rs  shared.rs
src/crates/kennel-compose/: Cargo.toml
src/crates/kennel-compose/src/: emit.rs  main.rs  probe.rs  questionnaire.rs  templates.rs
src/crates/kennel-dbus-broker/: Cargo.toml
src/crates/kennel-dbus-broker/src/: main.rs  mediate.rs
src/crates/kennel-facade/: Cargo.toml
src/crates/kennel-facade/src/: lib.rs  socks5.rs  tun.rs
src/crates/kennel-facade/src/socks5/: http.rs
src/crates/kennel-host-dbus/: Cargo.toml
src/crates/kennel-host-dbus/src/: lib.rs
src/crates/kennel-host-delegate/: Cargo.toml
src/crates/kennel-host-delegate/src/: inetd.rs  lib.rs  netproxy.rs
src/crates/kennel-host-delegate/src/inetd/: listen.rs
src/crates/kennel-host-delegate/src/netproxy/: conduit.rs  udp.rs
src/crates/kennel-init/: Cargo.toml
src/crates/kennel-init/src/: main.rs
src/crates/kennel-landlock/: Cargo.toml
src/crates/kennel-landlock/src/: lib.rs
src/fuzz/: Cargo.toml  README.md
src/fuzz/src/: lib.rs
supply-chain/: CHECKSUMS.toml  DEPENDENCIES.md  KEYS.md  RELEASE-WATCH.toml  UNSAFE-CRATES.md  audits.toml  config.toml
templates/: README.md
tools/: README.md  audit-helper.sh  audit-source.sh  ci-tools.toml  install-ci-tools.sh  install-hooks.sh  install.sh  (+1 more)
(+765 files in other folders)
