# Project Kennel — Cargo workspace root.
#
# One crate per architectural module (docs/architecture/03-crate-decomposition.md).
# The prefix encodes where the crate runs — the security-relevant fact:
#   kennel-lib-*  — libraries linked into the binaries (no runtime location of their own)
#   kennel-bin-*  — binaries that are neither end of a binder connector (e.g. init)
#   host-*        — the host end of a binder connector: a delegate kenneld drives (netproxy)
#   facade-*      — the in-kennel end of a binder connector: pushes workload traffic into binder,
#                   named for the protocol it fronts (facade-socks5, facade-afunix, facade-ssh)
#   kenneld, kennel-privhelper — kept bare: the two privileged host-TCB anchors.
#
# Dependency policy is strict (CODING-STANDARDS.md §5): exact version pins,
# vendored artefacts, the CHECKSUMS.toml manifest. The crates implemented so
# far are deliberately dependency-free (std only), so no external dependency
# machinery is engaged yet.

[workspace]
resolver = "2"
members = [
    # The privileged host-TCB anchors (bare names).
    "src/crates/kenneld",
    "src/crates/kennel-privhelper",
    # Libraries (linked into the binaries).
    "src/crates/kennel-lib-audit",
    "src/crates/kennel-lib-binder",
    "src/crates/kennel-lib-bpf",
    "src/crates/kennel-lib-config",
    "src/crates/kennel-lib-landlock",
    "src/crates/kennel-lib-os",
    "src/crates/kennel-lib-policy",
    "src/crates/kennel-lib-scm",
    "src/crates/kennel-lib-spawn",
    "src/crates/kennel-lib-syscall",
    "src/crates/kennel-lib-text",
    # Binaries that are not a binder-connector end.
    "src/crates/kennel-bin-init",
    # The host ends of binder connectors (kenneld's dial + inbound-bind delegates).
    "src/crates/host-netproxy",
    "src/crates/host-inetd",
    # The in-kennel ends of binder connectors (push workload traffic into binder, or pull it back).
    "src/crates/facade-afunix",
    "src/crates/facade-socks5",
    "src/crates/facade-client",
    "src/crates/facade-ssh",
    # Build-time tooling (not shipped): the manpage generator (std-only).
    "src/tools/gen-man",
]

[workspace.package]
# First versioned cut. All members inherit this via `version.workspace = true`,
# so a release bump is a one-line change here. Not git-tagged yet (§release).
version = "0.1.0"
edition = "2021"
# Set to the toolchain we actually build and test against. The standards
# (§2.1) call for an MSRV lagging the dev toolchain; lowering it is deferred
# until we can test against older toolchains (BUILD-ENV.md), rather than
# claiming a floor we have not verified.
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Project Kennel maintainers"]
repository = "https://github.com/projectkennel/projectkennel"
# Not a crates.io library set — this is the application. `publish = false` is the
# honest state (nothing is released to a registry; deps are vendored) and it
# blocks an accidental `cargo publish`. Revisit per-crate if a library is ever
# split out for publication.
publish = false

# Shared lint configuration, applied to every member via `[lints] workspace =
# true`. Encodes CODING-STANDARDS.md §12.2. `#![forbid(unsafe_code)]` is a
# per-crate attribute (§3, §4), not set here, so the kennel-lib-syscall and
# kennel-lib-bpf exception crates can omit it without fighting a workspace forbid.
[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"

# Lint groups carry priority -1 so the individual lints below (priority 0)
# take precedence when they overlap (Cargo requires this ordering).
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"

# The release profile aborts on panic (CODING-STANDARDS.md §8.5: a panic in
# the privhelper must terminate, not unwind through cleanup). The test profile
# is dev-based and unwinds by default, so #[should_panic] and catch_unwind work
# without an explicit override (cargo ignores `panic` on the test profile).
[profile.release]
opt-level = 3
lto = "thin"
# `codegen-units = 1` is also a reproducibility lever: a single unit removes the
# parallel-codegen non-determinism, so combined with the path remapping that
# `src/tools/reproducible-build.sh` applies (`--remap-path-prefix`, the stable stand-in
# for the still-unstable `trim-paths`) and rustc honouring `SOURCE_DATE_EPOCH`, the
# release binaries hash identically across builders (BUILD-ENV.md §Reproducibility).
codegen-units = 1
strip = "symbols"
panic = "abort"

# Production crash symbolication: a release build (optimised, and reproducible when
# built via `src/tools/reproducible-build.sh`) that keeps full debug info instead of
# stripping it. `inherits` carries every release setting, so it is as reproducible as
# `release`. Build with `cargo build --profile release-with-debuginfo` (or set
# `KENNEL_PROFILE=release-with-debuginfo` for the reproducible-build script).
[profile.release-with-debuginfo]
inherits = "release"
strip = "none"
debug = "full"
