# Project Kennel — Cargo workspace root.
#
# One crate per architectural module (docs/reference/03-crate-decomposition.md).
# The prefix encodes where the crate runs — the security-relevant fact:
#   kennel-lib-*  — libraries linked into the binaries (no runtime location of their own)
#   kennel-bin-*  — binaries that are neither end of a binder connector (e.g. init)
#   host-*        — the host end of a binder connector: a delegate kenneld drives (netproxy)
#   facade-*      — the in-kennel end of a binder connector: pushes workload traffic into binder,
#                   named for the protocol it fronts (facade-socks5, facade-afunix, facade-ssh)
#   kenneld, kennel-privhelper — kept bare: the two privileged host-TCB anchors.
#
# Dependency policy is strict (CODING-STANDARDS.md §5): exact version pins,
# vendored artefacts, the CHECKSUMS.toml manifest. The crates implemented so
# far are deliberately dependency-free (std only), so no external dependency
# machinery is engaged yet.

[workspace]
resolver = "2"
members = [
    # The privileged host-TCB anchors (bare names).
    "src/crates/kenneld",
    "src/crates/kennel-privhelper",
    # The unprivileged operator CLI (its own crate so the daemon TCB does not carry
    # the CLI's deps — serde_json, the trust-manifest reader, arg parsing).
    "src/crates/kennel-cli",
    # The shared CLI surface grammar both execution units (host + in-cage spawn) link,
    # so overlapping verbs keep identical shapes across contexts (std-only).
    "src/crates/kennel-lib-cli",
    # The unified `kennel` command shim: authority-free context-detect + exec the right
    # execution unit. Static so one artifact runs host-side and in-cage (std-only).
    "src/crates/kennel-shim",
    # Libraries (linked into the binaries).
    "src/crates/kennel-lib-audit",
    "src/crates/kennel-lib-binder",
    "src/crates/kennel-lib-bpf",
    "src/crates/kennel-lib-config",
    # The CLI/daemon control-socket wire protocol (shared, no enforcement code).
    "src/crates/kennel-lib-control",
    # The policy compiler (authoring front end), split from kennel-lib-policy so
    # the daemon's TCB links only the runtime verify-and-load half.
    "src/crates/kennel-lib-compile",
    "src/crates/kennel-lib-dbus",
    "src/crates/kennel-lib-landlock",
    "src/crates/kennel-lib-manifest",
    "src/crates/kennel-lib-os",
    "src/crates/kennel-lib-policy",
    "src/crates/kennel-lib-scm",
    "src/crates/kennel-lib-spawn",
    "src/crates/kennel-lib-syscall",
    "src/crates/kennel-lib-term",
    # Schema single-source: the IR + reflection trait, and the derive that reflects the
    # source structs into it. Build-time/tooling only — never in the runtime/TCB build.
    "src/crates/kennel-schema",
    "src/crates/kennel-schema-derive",
    "src/crates/kennel-lib-text",
    # Binaries that are not a binder-connector end.
    "src/crates/kennel-bin-init",
    # The OCI launcher: workload-side argv[0] for an image-root kennel (not in the daemon TCB).
    "src/crates/kennel-bin-oci-entry",
    # The host ends of binder connectors (kenneld's dial + inbound-bind delegates):
    # one crate, two binaries (host-netproxy, host-inetd) + the shared conduit lib.
    "src/crates/kennel-host-delegate",
    "src/crates/kennel-host-dbus",
    # The standing D-Bus mediation service kennel (§7.7, W1 Part C): replaces per-consumer
    # host-dbus delegates with a single brokered service via the binder-connector mesh.
    "src/crates/kennel-dbus-broker",
    # The W2 UDP-egress fenced flow broker: a per-kennel host-mode leaf running the DNS naming
    # shim (mint synthetic on approval, AAAA/NODATA) + the L3 flow forwarder driving host-netproxy.
    "src/crates/kennel-udp-broker",
    # The in-kennel ends of binder connectors (push workload traffic into binder, or pull it back):
    # one crate, four binaries (facade-afunix/socks5/client/ssh).
    "src/crates/kennel-facade",
    # The standalone policy-authoring tool (W9). Optional separate install, not part of
    # the runtime dispatch tree. Carries heavier deps (termion) that the runtime path does
    # not link.
    "src/crates/kennel-compose",
    # Build-time tooling (not shipped): the manpage + policy-schema + crate-inventory generators (std-only).
    "src/tools/gen-man",
    "src/tools/gen-schema",
    "src/tools/gen-inventory",
]

[workspace.package]
# All members inherit this via `version.workspace = true`, so a release bump is a
# one-line change here.
version = "0.5.0"
edition = "2021"
# Set to the toolchain we actually build and test against. The standards
# (§2.1) call for an MSRV lagging the dev toolchain; lowering it is deferred
# until we can test against older toolchains (BUILD-ENV.md), rather than
# claiming a floor we have not verified.
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Project Kennel maintainers"]
repository = "https://github.com/projectkennel/projectkennel"
# Not a crates.io library set — this is the application. `publish = false` is the
# honest state (nothing is released to a registry; deps are vendored) and it
# blocks an accidental `cargo publish`. Revisit per-crate if a library is ever
# split out for publication.
publish = false

# Shared lint configuration, applied to every member via `[lints] workspace =
# true`. Encodes CODING-STANDARDS.md §12.2. `#![forbid(unsafe_code)]` is a
# per-crate attribute (§3, §4), not set here, so the kennel-lib-syscall and
# kennel-lib-bpf exception crates can omit it without fighting a workspace forbid.
[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "warn"

# Lint groups carry priority -1 so the individual lints below (priority 0)
# take precedence when they overlap (Cargo requires this ordering).
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"

# The release profile aborts on panic (CODING-STANDARDS.md §8.5: a panic in
# the privhelper must terminate, not unwind through cleanup). The test profile
# is dev-based and unwinds by default, so #[should_panic] and catch_unwind work
# without an explicit override (cargo ignores `panic` on the test profile).
[profile.release]
opt-level = 3
lto = "thin"
# `codegen-units = 1` is also a reproducibility lever: a single unit removes the
# parallel-codegen non-determinism, so combined with the path remapping that
# `src/tools/reproducible-build.sh` applies (`--remap-path-prefix`, the stable stand-in
# for the still-unstable `trim-paths`) and rustc honouring `SOURCE_DATE_EPOCH`, the
# release binaries hash identically across builders (BUILD-ENV.md §Reproducibility).
codegen-units = 1
strip = "symbols"
panic = "abort"

# Production crash symbolication: a release build (optimised, and reproducible when
# built via `src/tools/reproducible-build.sh`) that keeps full debug info instead of
# stripping it. `inherits` carries every release setting, so it is as reproducible as
# `release`. Build with `cargo build --profile release-with-debuginfo` (or set
# `KENNEL_PROFILE=release-with-debuginfo` for the reproducible-build script).
[profile.release-with-debuginfo]
inherits = "release"
strip = "none"
debug = "full"
