[package]
name = "kennel-bpf"
version.workspace = true
description = "Project Kennel BPF program loader: loads and attaches the cgroup BPF programs of bpf/ via a hand-rolled bpf(2) loader over libc, using object only for ELF parsing. The second crate permitted unsafe (the FFI to bpf(2))."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
libc = "=0.2.186"
object = { version = "=0.36.7", default-features = false, features = ["read_core", "elf"] }

[features]
root-tests = []
# Compile bpf/*.bpf.c with clang at build time and embed the objects (build.rs).
# Off by default so a plain `cargo build` needs no clang.
embed-programs = []

[lints]
workspace = true
