[package]
name = "kennel-netproxy"
version = "0.0.0"
description = "Project Kennel per-kennel egress broker: the only network destination a confined workload may reach. Auto-detects SOCKS5 or HTTP-proxy on one listener, resolves names under policy, enforces a per-destination allowlist, and writes a structured audit record per request."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
