[package]
name = "kennel-netproxy"
version.workspace = true
description = "Project Kennel per-kennel egress broker: the only network destination a confined workload may reach. Auto-detects SOCKS5 or HTTP-proxy on one listener, resolves names under policy, enforces a per-destination allowlist, and writes a structured audit record per request."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "=1.0.228", default-features = false, features = ["std", "derive"] }
basic-toml = "=0.1.10"

[lints]
workspace = true

[[bin]]
name = "kennel-netproxy"
path = "src/main.rs"
