[package]
name = "kennel-policy"
version = "0.0.0"
description = "Project Kennel policy crate: settled-policy types, the canonical-form serialisation, and Ed25519 signature verification (the runtime trust surface consumed by kennel-spawn). Pure and I/O-free; callers supply bytes."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "=1.0.228", default-features = false, features = ["std", "derive"] }
basic-toml = "=0.1.10"
ed25519-compact = { version = "=2.3.0", default-features = false, features = ["std"] }

[lints]
workspace = true
