[package]
name = "kennel-privhelper"
version = "0.0.0"
description = "Project Kennel privileged-operation helper: validates and performs the minimal set of privileged operations (loopback address and cgroup management) for a kennel, refusing anything outside Project Kennel's reserved scope."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kennel-syscall = { path = "../kennel-syscall" }

[features]
# Tests that need privilege (real cgroup/address ops). Run via:
#   sudo -E env PATH=$PATH cargo test -p kennel-privhelper --features root-tests
root-tests = []

[lints]
workspace = true

[[bin]]
name = "kennel-privhelper"
path = "src/main.rs"
