[package]
name = "kennel-spawn"
version = "0.0.0"
description = "Project Kennel spawn orchestration: turns a verified, substituted settled policy into the kernel enforcement objects (namespaces, mounts, Landlock, seccomp, cgroup/BPF) and spawns the confined workload. Holds no unsafe — all syscalls route through kennel-syscall and kennel-bpf."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kennel-policy = { path = "../kennel-policy" }
kennel-syscall = { path = "../kennel-syscall" }

[lints]
workspace = true
