[package]
name = "kennel-spawn"
version.workspace = true
publish.workspace = true
description = "Project Kennel spawn orchestration: turns a verified, substituted settled policy into the kernel enforcement objects (namespaces, mounts, Landlock, seccomp, cgroup/BPF) and spawns the confined workload. Holds no unsafe — all syscalls route through kennel-syscall and kennel-bpf."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kennel-bpf = { path = "../kennel-bpf" }
kennel-policy = { path = "../kennel-policy" }
kennel-syscall = { path = "../kennel-syscall" }

[features]
# Tests that need privilege (namespace unshare, cgroup BPF attach). Pulls the
# embedded BPF programs (clang at build time). Run via:
#   sudo -E env PATH=$PATH cargo test -p kennel-spawn --features root-tests
root-tests = ["kennel-bpf/embed-programs"]

[lints]
workspace = true
