# kennel-fuzz — hand-rolled fuzz / property harnesses for the untrusted-input
# parsers (CODING-STANDARDS.md §10.6). This is the "Path C" approach: the
# `arbitrary` crate plus a hand-rolled runner, NOT cargo-fuzz / libfuzzer-sys
# (which would pull a C++-compiling build.rs and a bundled LLVM runtime).
#
# This is a SEPARATE workspace (note the empty [workspace] table below): it does
# not enter the main workspace's member list, Cargo.lock, or CHECKSUMS.toml, so
# the offline `cargo build --frozen --locked` gate for the shipped crates is
# unaffected by anything here.
#
# STATUS: staged. Building/running this needs the `arbitrary` crate vendored per
# §5.5 (it is the only new dependency, and with `default-features = false` it has
# ZERO transitive deps — one crate, no proc-macro, no build script). See README.md
# for the vendoring step; until then the harness does not compile, by design, and
# nothing in the shipped build references it.
[workspace]

[package]
name = "kennel-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Fuzz/property harnesses for Project Kennel's untrusted-input parsers."

[dependencies]
# No `derive` feature -> arbitrary has no transitive dependencies. Pin confirmed
# by the reviewer during the §5.5 vendoring step.
arbitrary = { version = "=1.4.1", default-features = false }
kennel-netproxy = { path = "../crates/kennel-netproxy" }
kenneld = { path = "../crates/kenneld" }
kennel-privhelper = { path = "../crates/kennel-privhelper" }
kennel-policy = { path = "../crates/kennel-policy" }
kennel-binder = { path = "../crates/kennel-binder" }
