# kennel-fuzz — hand-rolled fuzz / property harnesses for the untrusted-input
# parsers (CODING-STANDARDS.md §10.6). This is the "Path C" approach: the
# `arbitrary` crate plus a hand-rolled runner, NOT cargo-fuzz / libfuzzer-sys
# (which would pull a C++-compiling build.rs and a bundled LLVM runtime).
#
# This is a SEPARATE workspace (note the empty [workspace] table below): it does
# not enter the main workspace's member list, Cargo.lock, or CHECKSUMS.toml, so
# the offline `cargo build --frozen --locked` gate for the shipped crates is
# unaffected by anything here.
#
# Runs via `cargo test -p kennel-fuzz` from this directory. Its one fuzzing-only
# dependency, `arbitrary` (`default-features = false` -> zero transitive deps, no
# proc-macro, no build script), is vendored per §5.5 like every other crate; the
# parser crates come from the workspace by path. Nothing in the shipped build
# references this harness.
[workspace]

[package]
name = "kennel-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Fuzz/property harnesses for Project Kennel's untrusted-input parsers."

[dependencies]
# No `derive` feature -> arbitrary has no transitive dependencies. Pin confirmed
# by the reviewer during the §5.5 vendoring step.
arbitrary = { version = "=1.4.1", default-features = false }
kenneld = { path = "../crates/kenneld" }
kennel-privhelper = { path = "../crates/kennel-privhelper" }
kennel-lib-policy = { path = "../crates/kennel-lib-policy" }
kennel-lib-binder = { path = "../crates/kennel-lib-binder" }
kennel-lib-term = { path = "../crates/kennel-lib-term" }
# The enforcement-plan wire: kenneld-built bytes a *privileged* process decodes — the
# privhelper factory decodes the construction-half, root `kennel-bin-init` the supervision-half
# (07-2). Hand-rolled + bounds-checked; a malformed blob must be a clean PlanWireError.
kennel-lib-spawn = { path = "../crates/kennel-lib-spawn" }
# The egress front-door parsers (facade-socks5): the workload speaks SOCKS5/HTTP to
# the in-kennel shim, so its protocol classifier and HTTP request-head parser read
# fully workload-controlled bytes (07-5 §7.5.2). Library target only — the bins do not link.
kennel-facade = { path = "../crates/kennel-facade" }
# The D-Bus facade's incoming-message decoder (07-7 §7.7): the workload's bus client
# speaks raw D-Bus wire to facade-dbus, so the header/body decode reads fully
# workload-controlled bytes. Driven through the public sans-IO read loop.
mini-sansio-dbus = "=5.0.1"
# The D-Bus mediation parsers (07-7 §7.7): the facade's SASL handshake reads
# workload-controlled auth bytes, and the typed-frame decoder reads frames the
# untrusted in-kennel facade produced (host-dbus side). Both are bounded parsers.
kennel-lib-dbus = { path = "../crates/kennel-lib-dbus" }
