[package]
name = "host-inetd"
version.workspace = true
publish.workspace = true
description = "Project Kennel per-kennel inbound BIND delegate: the reverse of host-netproxy. kenneld owns the bind decision (the [net.bpf].bind cgroup ACL already gated it); this binary binds a policy-mirrored ip:port on the host loopback, accepts, and pushes each accepted connection's fd back to kenneld over an owner-only AF_UNIX socket. A glorified inetd across the kennel net-ns boundary."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# SCM_RIGHTS fd-passing: the inbound conduit (§7.5.7) — host-inetd accepts a host-side connection and
# hands its fd to kenneld over the kenneld↔delegate AF_UNIX socket. A small focused crate, so the
# delegate's TCB stays minimal (not the whole kennel-lib-syscall unsafe surface). Mirrors host-netproxy.
kennel-lib-scm = { path = "../kennel-lib-scm" }

[lints]
workspace = true

[[bin]]
name = "host-inetd"
path = "src/main.rs"
