[package]
name = "host-netproxy"
version.workspace = true
publish.workspace = true
description = "Project Kennel per-kennel egress dial delegate: kenneld owns the egress decision (allow/deny, DNS, address pinning); this binary receives a pinned address and a conduit fd over an owner-only AF_UNIX socket, dials, and splices. A glorified netcat across the kennel net-ns boundary."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# SCM_RIGHTS fd-passing: the INet conduit (§7.5.2) — kenneld mints a socketpair, dials are driven
# here, and the conduit end arrives over the kenneld↔delegate AF_UNIX socket. A small focused crate,
# so the delegate's TCB stays minimal (not the whole kennel-lib-syscall unsafe surface).
kennel-lib-scm = { path = "../kennel-lib-scm" }

[lints]
workspace = true

[[bin]]
name = "host-netproxy"
path = "src/main.rs"
